style/layout/_contact.scss
.contact {
  min-height: 100%;

  > article {
    display: grid;
    justify-content: stretch;

    grid-template-columns: 36px 1fr 48px 1px 48px 1fr 36px;
    grid-template-rows: 36px auto 90px auto;

    @media (max-width: 690px) {
      grid-template-columns: 100%;
      grid-template-rows: 36px [contact]auto 36px [social]48px 36px [divider]1px 36px [form]auto 36px [nav]auto (64px + 12px);
    }

    // @include tablet {
    //   grid-template-columns: 24px 1fr 32px 1px 32px 1fr 24px;
    // }
  }

  .contact-info {
    grid-column: 2 / span 1;
    grid-row: 2 / span 1;

    @media (max-width: 690px) {
      grid-column: 1 / span 1;
    }
  }

  .form-container {
    grid-column: 6 / span 1;
    grid-row: 2 / span 3;

    @media (max-width: 690px) {
      grid-column: 1 / span 1;
      grid-row: form / span 1;

      justify-self: center;
      width: calc(100% - 24px * 2);
    }
  }

  .social-links {
    grid-column: 2 / 7;
    grid-row: 4 / span 1;

    @media (max-width: 690px) {
      grid-column: 1 / span 1;
      grid-row: social / span 1;
    }
  }

  .horizontal-divider {
    grid-column: 4 / span 1;
    grid-row: 2 / span 1;

    @media (max-width: 690px) {
      grid-column: 1 / span 1;
      grid-row: divider / span 1;
    }

    background-color: $colorLight2;
  }

  .bottom-nav {
    grid-column: 1 / span 1;
    grid-row: nav / span 1;
  }
}

.contact > header {
  position: relative;
  margin-top: 64px;
  height: 200px;
  width: 100%;

  @include mobile {
    height: 160px;
  }

  h1 {
    position: absolute;
    bottom: 20px;
    width: 100%;
    margin: 0;
    font-size: 36px;
    font-weight: 500;
    color: #fff;
    text-align: center;
    font-family: $fontSecondary;

    @include mobile {
      font-size: 24px;
    }
  }

  .color-overlay {
    background: linear-gradient( 360deg, rgba($colorDark, 0.7) 0%, rgba($colorDark, 0) 100%),
  }
}

.contact-info {
  color: $colorDark;

  @media (max-width: 690px) {
    width: 280px;
    text-align: center;
    justify-self: center;
  }

  > * {
    float: right;
    clear: both;

    @media (max-width: 690px) {
      float: none;
    }
  }

  .phone {
    font-family: $fontSecondary;
    font-weight: 500;
    font-size: 42px;
    margin-bottom: 16px;
  }

  .email {
    display: inline-block;
    font-size: 24px;
    margin-bottom: 20px;
  }

  .address {
    float: right;

    font-size: 16px;
    white-space: pre-line;
    max-width: 300px;
    line-height: 1.5;

    @include mobile {
      display: inline-block;
      float: none;
    }
  }
}

.contact .social-links {
  @media (max-width: 690px) {
    justify-content: space-evenly;
  }

  a {
    @include rectSize(48px);

    border: 1.5px solid $colorLight2;
    border-radius: 48px;

    margin: 0 18px 78px;

    transition: $transitionEaseOutShort;

    @media (max-width: 690px) {
      margin: 0;
    }

    &:hover {
      background-color: $colorLight2;
    }

    .icon {
      @include rectSize(30px);
    }
  }
}

